# Wise

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  makefile  prog
backup/V1/source/: main.cpp
backup/V2/: compile_commands.json  makefile  prog
backup/V2/data/shaders/: shader.slang  slang.spv
backup/V2/source/: main.cpp
backup/V3/: makefile  prog
backup/V3/data/shaders/: slang.spv
backup/V3/notes/: TODO.norg
backup/V3/source/: main.cpp
backyard/: c.cpp  prog  test.cpp
data/shaders/: grid.spv  gridShader.slang  gridShader2.slang  shader.slang
lua/: config.lua
notes/: TODO.norg
source/: main.cpp  makefile  prog  time.cpp
